# SAi2.0_Substation

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  camera_calibration_test.cpp  controller.cpp  getTransform.cpp  redis_keys.h  redundant_motion.cpp  robot_controller.cpp  robot_controller_v2.cpp  save_pose.cpp  sim_controller.cpp  simulation.cpp  simviz (copy).cpp  simviz.cpp  transformation.py  visualizer.cpp  vs_controller.cpp
src/dual_proxy_motion_haptic/: CMakeLists.txt  haptic_controller.cpp  redis_keys.h
src/dual_proxy_motion_robot/: CMakeLists.txt  iiwa14.urdf  keyboard_input.py  panda_arm.urdf  redis_keys.h  robot_controller.cpp  simviz.cpp  visualizer.cpp  world.urdf
src/dual_proxy_motion_robot/archive/: controller.cpp
